// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Divider passes the snapshot test for different length modes 1`] = `
Array [
  <View
    style={
      Object {
        "backgroundColor": "#1A2138",
        "display": "flex",
        "height": 1,
        "width": "50%",
      }
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#ee82ee",
        "display": "flex",
        "height": 20,
        "width": 1,
      }
    }
  />,
]
`;

exports[`Atoms/Divider passes the snapshot test in dark mode 1`] = `
Array [
  <View
    style={
      Object {
        "backgroundColor": "#1A2138",
        "display": "flex",
        "height": 1,
        "width": "100%",
      }
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#1A2138",
        "display": "flex",
        "height": "100%",
        "width": 1,
      }
    }
  />,
]
`;

exports[`Atoms/Divider passes the snapshot test in light mode 1`] = `
Array [
  <View
    style={
      Object {
        "backgroundColor": "#E4E9F2",
        "display": "flex",
        "height": 1,
        "width": "100%",
      }
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#E4E9F2",
        "display": "flex",
        "height": "100%",
        "width": 1,
      }
    }
  />,
]
`;
